# SNeModel-GPU

./: CMakeLists.txt
include/SNeModel/: test.h
src/: test.cu
